--- a/src/template.html
+++ b/src/template.html
@@ -19,20 +19,22 @@
     <div class="container">
         <div class="featured">
             <div class="featured-photo">
-                Feature Photo
+                <img src="featured.jpg" alt="">
             </div>
             <div class="featured-info">
-                Featured Info
+                <h1>Blueberry Creamed Honey</h1>
+                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
             </div>
         </div>
         <div class="testimonial">
             <div class="quote-banner">
-                <p class="quote">SOME TEXT</p>
-                <p class="author">SOME AUTHOR</p>
+                <div class="quote-box">
+                    <p class="quote">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                </div>
+                <div class="author-box">
+                    <p class="author"> - SOME AUTHOR</p>
+                </div>
             </div>
-        </div>
-        <div class="gallery">
-            Gallery
         </div>
     </div>
     <footer>Created by Liam Gonzales 2024</footer>
