Added Index function, gave buttons functionality

--- a/src/template.html
+++ b/src/template.html
@@ -11,9 +11,9 @@
             <img src="./Untitled-4.svg" alt="" class="logo">
         </div>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button data-value= "home">Home</button>
+            <button data-value= "menu">Menu</button>
+            <button data-value= "about">About</button>
         </nav>
     </header>
     <div class="container">
